@@ -282,6 +282,11 @@ Ansel Sermersheim	- For contributing about 100 symbols of which 75 were
 			  Ales renamed some of the above to -2 or -3 if there
 			  was a name clash
 
+Bas Gieltjes 		- For contributing the following symbols
+
+				cccs-1.sym ccvs-1.sym nullor-1.sym 
+				vccs-1.sym vcvs-1.sym
+
 Also thanks go to all the people on the geda-dev mailing list.  Many of
 the subscribers provided good suggestions which are greatly appreciated
 (and even implemented :-).  I'll be listing some of the contributers
