@@ -1,0 +1,20 @@
+v 19990327
+P 200 0 200 200 1
+{
+T 150 100 5 8 0 1 90
+pin2=2
+}
+P 200 900 200 700 1
+{
+T 150 700 5 8 0 1 90
+pin1=1
+}
+V 200 450 200 3
+T -600 600 9 8 0 0 90
+device=VOLTAGE SOURCE
+L 200 200 200 250 3
+L 200 650 200 700 3
+T 175 500 9 10 1 0 0
++
+T 175 275 9 10 1 0 0
+-
