@@ -1,0 +1,11 @@
+dataspicedir = @gedadatadir@/sym/spice
+
+dataspice_DATA = @dataspice@
+
+EXTRA_DIST = $(dataspice_DATA)
+
+MOSTLYCLEANFILES = *.log *~
+CLEANFILES = *.log *~
+DISTCLEANFILES = *.log *~
+MAINTAINERCLEANFILES = *.log *~
+
