@@ -1,0 +1,44 @@
+v 19990829
+L 1000 600 800 400 3
+L 800 400 1000 200 3
+L 1200 400 1000 200 3
+L 1200 400 1000 600 3
+L 1000 600 1000 700 3
+L 1000 700 1300 700 3
+L 1300 100 1000 100 3
+L 1000 200 1000 100 3
+P 1300 700 1500 700 1
+{
+T 1400 800 5 8 0 0 0
+pin1=1
+}
+P 1300 100 1500 100 1
+{
+T 1400 -100 5 8 0 0 0
+pin2=2
+}
+L 1300 0 1300 800 3
+L 500 700 500 100 3
+L 500 100 200 100 3
+L 200 700 500 700 3
+L 200 800 200 0 3
+L 200 800 1300 800 3
+T -100 1000 9 8 0 0 0
+device=SPICE-cccs
+L 1300 0 200 0 3
+P 200 700 0 700 1
+{
+T -400 800 5 8 0 0 0
+pin3=3
+}
+P 0 100 200 100 1
+{
+T -400 -100 5 8 0 0 0
+pin4=4
+}
+L 800 400 1200 400 3
+L 500 200 450 350 3
+L 500 200 550 350 3
+L 750 625 750 200 3
+L 750 200 700 350 3
+L 750 200 800 350 3
