@@ -1,0 +1,38 @@
+v 19990829
+P 1300 700 1500 700 1
+{
+T 1400 800 5 8 0 0 0
+pin2=2
+}
+P 1300 100 1500 100 1
+{
+T 1400 -100 5 8 0 0 0
+pin1=1
+}
+L 1300 0 1300 800 3
+L 200 800 200 0 3
+L 200 800 1300 800 3
+T -100 1000 9 8 0 0 0
+device=SPICE-nullor
+L 1300 0 200 0 3
+P 200 700 0 700 1
+{
+T -400 800 5 8 0 0 0
+pin3=3
+}
+P 0 100 200 100 1
+{
+T -400 -100 5 8 0 0 0
+pin4=4
+}
+L 500 400 1000 400 3
+L 1000 400 900 500 3
+L 1000 400 900 300 3
+T 300 600 9 10 1 0 0
++
+T 1100 100 9 10 1 0 0
++
+T 300 100 9 10 1 0 0
+-
+T 1100 600 9 10 1 0 0
+-
