@@ -11,6 +11,11 @@ Most recent changes (version wise) are at the top of this file
 All the changes are usually noted in this file when they are checked
 into the cvs repository.
 
+9/16/99	Created a spice symbol library which hold some of the special
+	spice symbols by Bas Gieltjes
+		- Added spice to all the required configure/Makefiles 
+		- Added spice dir to system-commonrc.in
+
 9/15/99	Added pin#= attributes to all symbols in the io library
 
 	Added device= attributes too all the symbols in the io library
